# django-boilerplate

./: example.env  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: 01-testing.yml
backend/: .env  asgi.py  settings.py  urls.py  wsgi.py
backend/abstract/: models.py  serializers.py
backend/abstract/utils/: error_handler.py
backend/account/: models.py  urls.py
backend/account/migrations/: 0001_initial.py
