[project]
name = "django-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "attrs==25.1.0",
    "autopep8==2.3.2",
    "django==5.1.6",
    "django-currentuser==0.8.0",
    "django-filter==25.1",
    "django-silk==5.3.2",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.5.0",
    "drf-spectacular==0.28.0",
    "drf-standardized-errors==0.14.1",
    "gprof2dot==2024.6.6",
    "inflection==0.5.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "psycopg2-binary==2.9.10",
    "pycodestyle==2.12.1",
    "pyjwt==2.9.0",
    "python-decouple==3.8",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "rpds-py==0.23.1",
    "sqlparse==0.5.3",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
]
